--- a/src/style/components/base.css
+++ b/src/style/components/base.css
@@ -8,7 +8,61 @@ body, Image, img, div, input, a, li, ul, textarea, span, p, h1, h2, h3, ol, asid
 .container {
     max-width: 1250px;
     width: 100%; 
-    padding: 0 30px;
+    padding: 0 50px;
     display: block;
     margin: 0 auto;
+}
+.flex{
+    display: flex;
+}
+.flex-cl{
+    flex-direction: column;
+}
+.flex-jc-sb{
+    justify-content: space-between;
+}
+.flex-ai-c{
+    align-items: center;
+}
+.p0{
+    padding: 0px;
+}
+.p1{
+    padding: 5px;
+}
+.p2{
+    padding: 10px;
+}
+.p3{
+    padding: 15px;
+}
+
+.p7{
+    padding: 40px;
+}
+.ptb7{
+    padding: 40px 0;
+}
+
+.m1{
+    margin: 5px;
+}
+.m2{
+    margin: 10px;
+}
+.m3{
+    margin: 15px;
+}
+
+.m7{
+    margin: 40px;
+}
+.mtb7{
+    margin: 40px 0;
+}
+.mtb2{
+    margin: 10px 0;
+}
+.mtb4{
+    margin: 20px 0;
 }
