--- a/src/style/components/button.css
+++ b/src/style/components/button.css
@@ -5,7 +5,6 @@
     outline: none;
     border: none;
     cursor: pointer;
-    width: 100%;
     margin-bottom: 10px;
 }
 .button-primary {
@@ -21,5 +20,13 @@
     background-color: transparent;
 }
 .button-primary-border:hover {
+    opacity: 0.8;
+}
+.button-secondary-bordered{
+    border: 1px solid #bcbebf;
+    color: #303233;
+    background-color: #fafafa;
+}
+.button-secondary-bordered:hover {
     opacity: 0.8;
 }
