--- a/src/style/components/header.css
+++ b/src/style/components/header.css
@@ -23,6 +23,7 @@
     cursor: pointer;
     font-size: 14px;
     font-weight: 400;
+    text-decoration: none;
 }
 
 .header-search {
@@ -52,7 +53,7 @@
     font-size: 12px;
     font-weight: 400;
 }
-.header-button-green {
+a.header-button-green {
     color: #a3daa5;
     border: 1px solid rgba(163, 218, 165, .5);
 
