--- a/src/style/components/input.css
+++ b/src/style/components/input.css
@@ -3,7 +3,11 @@
     border-radius: 4px;
     padding: 0 20px;
     width: 100%;
-    border: 1px solid #1785E5;
+    border: 1px solid #bdbcbc;
     outline: none;
     margin-bottom: 10px;
+}
+.input:focus {
+    border: 1px solid #1785E5;
+
 }
