starting a connection with the back end on the page create a resume

--- a/src/style/components/input.css
+++ b/src/style/components/input.css
@@ -11,3 +11,15 @@
     border: 1px solid #1785E5;
 
 }
+.autocomplite{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+.teg{
+    padding: 5px;
+    border-radius: 4px;
+    background-color: #eceff0;
+    display: inline-block;
+    margin-left: auto;
+}
