--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,6 @@
 @import url('../style/components/input.css');
 @import url('../style/components/fielcet.css');
 @import url('../style/components/dropdown.css');
+@import url('../style/components/selectdate.css');
+@import url('../style/components/radio.css');
+@import url('../style/components/modal.css');
