--- a/src/style/components/input.css
+++ b/src/style/components/input.css
@@ -5,8 +5,9 @@
     width: 100%;
     border: 1px solid #bdbcbc;
     outline: none;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
 }
+
 .input:focus {
     border: 1px solid #1785E5;
 
@@ -22,4 +23,17 @@
     background-color: #eceff0;
     display: inline-block;
     margin-left: auto;
+}
+.textarea{
+    height: 200px;
+    border-radius: 4px;
+    padding: 0 20px;
+    width: 100%;
+    border: 1px solid #bdbcbc;
+    outline: none;
+    resize: none;
+    padding-top: 10px;
+}
+.modal h2{
+    margin-bottom: 30px;
 }
