--- a/src/style/components/input.css
+++ b/src/style/components/input.css
@@ -17,6 +17,11 @@
     display: flex;
     flex-direction: column;
 }
+.tags{
+    display: flex;
+    gap: 5px;
+    flex-wrap: wrap;
+}
 .teg{
     padding: 5px;
     border-radius: 4px;
