--- a/src/style/components/button.css
+++ b/src/style/components/button.css
@@ -14,7 +14,8 @@
 .button-primary:hover{
     opacity: 0.8;
 }
-.button-primary-border{
+
+.button-primary-borderd{
     border: 1px solid#1785e5;
     color: #1785E5;
     background-color: transparent;
