--- a/src/style/components/fieldset.css
+++ b/src/style/components/fieldset.css
@@ -1,24 +1,23 @@
-.fielcet{
+.fieldset{
     display: flex;
-    justify-content: space-between;
     border: none;
     outline: none;
-    padding: 20px 0;
+    padding: 10px 0;
     position: relative;
 }
-.fielcet-sm{
+.fieldset-sm{
     width: 100%;
     max-width: 400px;
 }
-.fielcet-md{
+.fieldset-md{
     width: 100%;
     max-width: 500px;
 }
-.fielcet-lg{
+.fieldset-lg{
     width: 100%;
     max-width: 600px;
 }
-.fielcet label{
+.fieldset label{
     width: 300px;
     align-items: center;
     display: flex;
