--- a/src/style/components/input.css
+++ b/src/style/components/input.css
@@ -1,11 +1,11 @@
 .input {
-    height: 40px;
+    height: 35px;
     border-radius: 4px;
     padding: 0 20px;
     width: 100%;
     border: 1px solid #bdbcbc;
     outline: none;
-    /* margin-bottom: 10px; */
+    margin-bottom: 5px;
 }
 
 .input:focus {
@@ -30,7 +30,7 @@
     margin-left: auto;
 }
 .textarea{
-    height: 200px;
+    height: 100px;
     border-radius: 4px;
     padding: 0 20px;
     width: 100%;
@@ -41,4 +41,21 @@
 }
 .modal h2{
     margin-bottom: 30px;
+}
+.lns{
+    margin-bottom: 20px;
+    position: relative;
+}
+.lns select:last-child{
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-right: 1px solid #ddd;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+.lns .remove {
+    position: absolute;
+    right: -10px;
+    top: 10px;
+    cursor: pointer;
 }
