--- a/src/style/components/button.css
+++ b/src/style/components/button.css
@@ -6,6 +6,9 @@
     border: none;
     cursor: pointer;
     margin-bottom: 10px;
+    align-items: center;
+    display: flex;
+    text-decoration: none;
 }
 .button-primary {
     background-color: #1785E5;
