implemented a detailed resume page

--- a/src/style/components/base.css
+++ b/src/style/components/base.css
@@ -69,3 +69,6 @@ body, Image, img, div, input, a, li, ul, textarea, span, p, h1, h2, h3, ol, asid
 .mtb4{
     margin: 20px 0;
 }
+.mr4{
+    margin-right: 20px;
+}
