added resume deletion function

--- a/src/style/components/card.css
+++ b/src/style/components/card.css
@@ -4,4 +4,5 @@
     -moz-box-shadow: 4px 4px 8px 8px rgba(34, 60, 80, 0.295);
     box-shadow: 4px 4px 8px 8px rgba(34, 60, 80, 0.114);
     padding: 20px;
+    position: relative;
 }
