--- a/src/style/components/page/resume.css
+++ b/src/style/components/page/resume.css
@@ -3,3 +3,9 @@
     width: 200px;
     margin-block-start: 1.33em;
 }
+.deleteResume{
+    position: absolute;
+    right: 20px;
+    top: 30px;
+    cursor: pointer;
+}
