--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,3 +13,4 @@
 @import url('../style/components/working-history.css');
 @import url('../style/components/education.css');
 @import url('../style/components/page/resume.css');
+@import url('../style/components/auth.css');
