added employer authorization

--- a/src/style/components/button.css
+++ b/src/style/components/button.css
@@ -19,7 +19,7 @@
     opacity: 0.8;
 }
 
-.button-primary-borderd{
+.button-primary-border{
     border: 1px solid#1785e5;
     color: #1785E5;
     background-color: transparent;
