added job search

--- a/src/style/components/fieldset.css
+++ b/src/style/components/fieldset.css
@@ -23,3 +23,13 @@
     align-items: center;
     display: flex;
 }
+.fieldset-vertical{
+    border: none;
+    margin: 0 0 30px;
+    padding: 0;
+}
+.fieldset-vertical label{
+    font-weight: 700;
+    margin-bottom: 20px;
+    display: block;
+}
