--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,3 +14,4 @@
 @import url('../style/components/education.css');
 @import url('../style/components/page/resume.css');
 @import url('../style/components/auth.css');
+@import url('../style/components/spec.css');
