--- a/src/style/components/modal.css
+++ b/src/style/components/modal.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100vw;
-    max-height: 100%;
+    height: 100vh;
     z-index: 20;
 }
 .modal-backdrop{
@@ -22,6 +22,8 @@
     max-width: 500px;
     margin: 50px auto 0;
     z-index: 2;
+    max-height: 80vh;
+    overflow-y: auto;
 }
 .modal-actions{
     /* margin: 20px; */
