added a page to add a vacancy

--- a/src/style/components/dropdown.css
+++ b/src/style/components/dropdown.css
@@ -7,6 +7,8 @@
     width: 50%;
     z-index: 3;
     background-color: #fff;
+    z-index: 20;
+    background: #fff;
 }
 .dropdown a{
     display: block;
