--- a/src/style/components/fieldset.css
+++ b/src/style/components/fieldset.css
@@ -29,6 +29,7 @@
     padding: 0;
     display: flex;
     flex-direction: column;
+    min-width: 0;
 }
 .fieldset-vertical label{
     font-weight: 700;
