--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,4 @@
 @import url('../style/components/page/resume.css');
 @import url('../style/components/auth.css');
 @import url('../style/components/spec.css');
+@import url('../style/components/table.css');
