--- a/src/style/components/base.css
+++ b/src/style/components/base.css
@@ -72,6 +72,9 @@ body, Image, img, div, input, a, li, ul, textarea, span, p, h1, h2, h3, ol, asid
 .mr4{
     margin-right: 20px;
 }
+.ml2{
+    margin-left: 10px;
+}
 .mt-7{
     margin-top: 40px;
 }
